feat: update video filters, translations, and add content info & image components

--- a/src/i18n/locales/ar/translation.json
+++ b/src/i18n/locales/ar/translation.json
@@ -433,5 +433,99 @@
   "Navigation": "التنقل",
   "Quick Access": "الوصول السريع",
   "Browse Our Top Courses": "تصفح أفضل دوراتنا",
-  "This Week's Good Effect Cards": "بطاقات التأثير الجيد لهذا الأسبوع"
+  "This Week's Good Effect Cards": "بطاقات التأثير الجيد لهذا الأسبوع",
+  "Phone no": "رقم الهاتف",
+  "Location": "الموقع",
+  "Personal Details": "المعلومات الشخصية",
+  "Current Password": "كلمة المرور الحالية",
+  "New Password": "كلمة المرور الجديدة",
+  "Password requirements": "متطلبات كلمة المرور",
+  "Ensure that these requirements are met": "تأكد من استيفاء هذه المتطلبات",
+  "Side filtration": "تصفية جانبية",
+  "All content": "كل المحتوى",
+  "Index Subject": "موضوع الفهرس",
+  "Health": "الصحة",
+  "Environment": "البيئة",
+  "Education": "التعليم",
+  "Arabic": "العربية",
+  "Chinese": "الصينية",
+  "Japanese": "اليابانية",
+  "Reset": "إعادة تعيين",
+  "Apply": "تطبيق",
+  "Filter by Date": "تصفية حسب التاريخ",
+  "Today": "اليوم",
+  "Last 7 days": "آخر 7 أيام",
+  "Last 30 days": "آخر 30 يومًا",
+  "Last 90 days": "آخر 90 يومًا",
+  "Clear All": "مسح الكل",
+  "Apply Filter": "تطبيق التصفية",
+  "Data Sorted!": "تم فرز البيانات!",
+  "Load More Clicked!": "تم النقر على تحميل المزيد!",
+  "Load More": "تحميل المزيد",
+  "This": "هذا",
+  "This Index Subject": "موضوع الفهرس هذا",
+  "French": "الفرنسية",
+  "German": "الألمانية",
+  "Russian": "الروسية",
+  "Spanish": "الإسبانية",
+  "Search by Date": "البحث حسب التاريخ",
+  "Clear date filter": "مسح تصفية التاريخ",
+  "You have been logged out successfully.": "تم تسجيل خروجك بنجاح.",
+  "Are you sure you want to log out?": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
+  "Log Out": "تسجيل الخروج",
+  "What would you like to read about today ?": "ماذا تود أن تقرأ اليوم؟",
+  "Search by Title": "البحث حسب العنوان",
+  "Article": "مقال",
+  "Photo": "صورة",
+  "Gallery": "معرض",
+  "Event": "فعالية",
+  "Announcement": "إعلان",
+  "Dark": "داكن",
+  "Light": "فاتح",
+  "Colorful": "ملون",
+  "Minimal": "بسيط",
+  "Classic": "كلاسيكي",
+  "Turkish": "التركية",
+  "Search": "بحث",
+  "Added to favorites!": "تمت الإضافة إلى المفضلة!",
+  "Removed from favorites": "تمت الإزالة من المفضلة",
+  "Image downloaded successfully!": "تم تنزيل الصورة بنجاح!",
+  "Failed to download image": "فشل في تنزيل الصورة",
+  "Rate this content": "قيّم هذا المحتوى",
+  "Your rating:": "تقييمك:",
+  "reviews": "مراجعات",
+  "This Week's Cards": "بطاقات هذا الأسبوع",
+  "Thank you for your rating!": "شكراً لك على تقييمك!",
+  "You rated this content {{rating}} stars!": "لقد قيمت هذا المحتوى بـ {{rating}} نجوم!",
+  "Medical": "طبي",
+  "Volunteer": "تطوع",
+  "Support": "دعم",
+  "Technology": "تكنولوجيا",
+  "Social": "اجتماعي",
+  "Cultural": "ثقافي",
+  "Humanitarian": "إنساني",
+  "Relief": "إغاثة",
+  "Similar Photos": "صور مشابهة",
+  "Event Photography": "تصوير الأحداث",
+  "Documentary": "وثائقي",
+  "Camera Settings": "إعدادات الكاميرا",
+  "Camera": "الكاميرا",
+  "This Week's Photos": "صور هذا الأسبوع",
+  "Photography": "التصوير",
+  "Educational": "تعليمي",
+  "views": "مشاهدة",
+  "View full image": "عرض الصورة كاملة",
+  "Download image": "تحميل الصورة",
+  "Share image": "مشاركة الصورة",
+  "Search by title or keyword...": "البحث حسب العنوان أو الكلمة الرئيسية...",
+  "Advanced Filters": "تصفية متقدمة",
+  "Content Type": "نوع المحتوى",
+  "Topic/Theme": "موضوع/ثيم",
+  "Culture": "ثقافة",
+  "Religion": "دين",
+  "Active filters:": " التصفية النشطة:",
+  "Remove filter": " إزالة التصفية",
+  "Apply Filters": "تطبيق التصفية",
+  "Search by title...": "البحث حسب العنوان...",
+  "Clear Filters": "مسح التصفية"
 }
