--- a/src/i18n/locales/ch/translation.json
+++ b/src/i18n/locales/ch/translation.json
@@ -412,5 +412,89 @@
   "Navigation": "導航",
   "Quick Access": "快速訪問",
   "Browse Our Top Courses": "瀏覽我們的熱門課程",
-  "This Week's Good Effect Cards": "本週的良好效果卡片"
+  "This Week's Good Effect Cards": "本週的良好效果卡片",
+  "Phone no": "電話號碼",
+  "Location": "位置",
+  "Personal Details": "個人資料",
+  "Current Password": "當前密碼",
+  "New Password": "新密碼",
+  "Password requirements": "密碼要求",
+  "Ensure that these requirements are met": "請確保符合這些要求",
+  "Side filtration": "側邊篩選",
+  "All content": "所有內容",
+  "Index Subject": "索引主題",
+  "Health": "健康",
+  "Environment": "環境",
+  "Education": "教育",
+  "Arabic": "阿拉伯文",
+  "Chinese": "中文",
+  "Japanese": "日文",
+  "Reset": "重設",
+  "Apply": "套用",
+  "Filter by Date": "按日期篩選",
+  "Today": "今天",
+  "Last 7 days": "過去7天",
+  "Last 30 days": "過去30天",
+  "Last 90 days": "過去90天",
+  "Clear All": "清除全部",
+  "Apply Filter": "套用篩選",
+  "Data Sorted!": "資料已排序！",
+  "Load More Clicked!": "已點擊載入更多！",
+  "Load More": "載入更多",
+  "This": "這個",
+  "This Index Subject": "此索引主題",
+  "English": "英文",
+  "French": "法文",
+  "German": "德文",
+  "Russian": "俄文",
+  "Spanish": "西班牙文",
+  "Search by Date": "按日期搜尋",
+  "Clear date filter": "清除日期篩選",
+  "You have been logged out successfully.": "您已成功登出。",
+  "Are you sure you want to log out?": "您確定要登出嗎？",
+  "Log Out": "登出",
+  "What would you like to read about today ?": "您今天想閱讀什麼？",
+  "Search by Title": "依標題搜尋",
+  "Article": "文章",
+  "Photo": "照片",
+  "Gallery": "圖庫",
+  "Event": "活動",
+  "Announcement": "公告",
+  "Dark": "深色",
+  "Light": "淺色",
+  "Colorful": "彩色",
+  "Minimal": "極簡",
+  "Classic": "經典",
+  "Turkish": "土耳其語",
+  "Search": "搜尋",
+  "Added to favorites!": "已加入最愛！",
+  "Removed from favorites": "已從最愛移除",
+  "Image downloaded successfully!": "圖片下載成功！",
+  "Failed to download image": "圖片下載失敗",
+  "Rate this content": "評價此內容",
+  "Your rating:": "您的評分：",
+  "reviews": "評論",
+  "This Week's Cards": "本週卡片",
+  "Camera Settings": "相機設定",
+  "Camera": "相機",
+  "View full image": "查看完整圖片",
+  "Download image": "下載圖片",
+  "Share image": "分享圖片",
+  "Search by title or keyword...": "依標題或關鍵字搜尋...",
+  "Advanced Filters": "進階篩選",
+  "Content Type": "內容類型",
+  "Topic/Theme": "主題",
+  "Technology": "科技",
+  "Culture": "文化",
+  "Religion": "宗教",
+  "Active filters:": "已啟用的篩選條件：",
+  "Remove filter": "移除篩選",
+  "Apply Filters": "套用篩選",
+  "Search by title...": "依標題搜尋...",
+  "Clear Filters": "清除篩選",
+  "Similar Photos": "相似照片",
+  "Event Photography": "活動攝影",
+  "Documentary": "紀實",
+  "Cultural": "文化類",
+  "This Week's Photos": "本週照片"
 }
