--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -371,5 +371,91 @@
   "Interactions": "Interactions",
   "Update Profile": "Update Profile",
   "Edit Profile": "Edit Profile",
-  "Save Password": "Save Password"
+  "Save Password": "Save Password",
+  "Phone no": "Phone no",
+  "Location": "Location",
+  "Personal Details": "Personal Details",
+  "Current Password": "Current Password",
+  "New Password": "New Password",
+  "Password requirements": "Password requirements",
+  "Ensure that these requirements are met": "Ensure that these requirements are met",
+  "Side filtration": "Side filtration",
+  "All content": "All content",
+  "Index Subject": "Index Subject",
+  "Health": "Health",
+  "Environment": "Environment",
+  "Education": "Education",
+  "Arabic": "Arabic",
+  "Chinese": "Chinese",
+  "Japanese": "Japanese",
+  "Reset": "Reset",
+  "Apply": "Apply",
+  "Filter by Date": "Filter by Date",
+  "Today": "Today",
+  "Last 7 days": "Last 7 days",
+  "Last 30 days": "Last 30 days",
+  "Last 90 days": "Last 90 days",
+  "Clear All": "Clear All",
+  "Apply Filter": "Apply Filter",
+  "Data Sorted!": "Data Sorted!",
+  "Load More Clicked!": "Load More Clicked!",
+  "Load More": "Load More",
+  "This": "This",
+  "This Index Subject": "This Index Subject",
+  "English": "English",
+  "French": "French",
+  "German": "German",
+  "Russian": "Russian",
+  "Spanish": "Spanish",
+  "Search by Date": "Search by Date",
+  "Clear date filter": "Clear date filter",
+  "You have been logged out successfully.": "You have been logged out successfully.",
+  "Are you sure you want to log out?": "Are you sure you want to log out?",
+  "Log Out": "Log Out",
+  "Settings": "Settings",
+  "Logout": "Logout",
+  "What would you like to read about today ?": "What would you like to read about today ?",
+  "Search by Title": "Search by Title",
+  "Article": "Article",
+  "Photo": "Photo",
+  "Gallery": "Gallery",
+  "Event": "Event",
+  "Announcement": "Announcement",
+  "Dark": "Dark",
+  "Light": "Light",
+  "Colorful": "Colorful",
+  "Minimal": "Minimal",
+  "Classic": "Classic",
+  "Turkish": "Turkish",
+  "Search": "Search",
+  "Added to favorites!": "Added to favorites!",
+  "Removed from favorites": "Removed from favorites",
+  "Image downloaded successfully!": "Image downloaded successfully!",
+  "Failed to download image": "Failed to download image",
+  "Rate this content": "Rate this content",
+  "Your rating:": "Your rating:",
+  "reviews": "reviews",
+  "This Week's Cards": "This Week's Cards",
+  "Camera Settings": "Camera Settings",
+  "Camera": "Camera",
+  "View full image": "View full image",
+  "Download image": "Download image",
+  "Share image": "Share image",
+  "Search by title or keyword...": "Search by title or keyword...",
+  "Advanced Filters": "Advanced Filters",
+  "Content Type": "Content Type",
+  "Topic/Theme": "Topic/Theme",
+  "Technology": "Technology",
+  "Culture": "Culture",
+  "Religion": "Religion",
+  "Active filters:": "Active filters:",
+  "Remove filter": "Remove filter",
+  "Apply Filters": "Apply Filters",
+  "Search by title...": "Search by title...",
+  "Clear Filters": "Clear Filters",
+  "Similar Photos": "Similar Photos",
+  "Event Photography": "Event Photography",
+  "Documentary": "Documentary",
+  "Cultural": "Cultural",
+  "This Week's Photos": "This Week's Photos"
 }
