--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -389,5 +389,89 @@
   "Navigation": "Navigasyon",
   "Quick Access": "Hızlı Erişim",
   "Browse Our Top Courses": "En İyi Kurslarımızı Gözden Geçirin",
-  "This Week's Good Effect Cards": "Bu Haftanın İyi Etki Kartları"
+  "This Week's Good Effect Cards": "Bu Haftanın İyi Etki Kartları",
+  "Phone no": "Telefon numarası",
+  "Location": "Konum",
+  "Personal Details": "Kişisel Bilgiler",
+  "Current Password": "Mevcut Şifre",
+  "New Password": "Yeni Şifre",
+  "Password requirements": "Şifre Gereksinimleri",
+  "Ensure that these requirements are met": "Bu gereksinimlerin karşılandığından emin olun",
+  "Side filtration": "Yan filtreleme",
+  "All content": "Tüm içerik",
+  "Index Subject": "Dizin Konusu",
+  "Health": "Sağlık",
+  "Environment": "Çevre",
+  "Education": "Eğitim",
+  "Arabic": "Arapça",
+  "Chinese": "Çince",
+  "Japanese": "Japonca",
+  "Reset": "Sıfırla",
+  "Apply": "Uygula",
+  "Filter by Date": "Tarihe Göre Filtrele",
+  "Today": "Bugün",
+  "Last 7 days": "Son 7 gün",
+  "Last 30 days": "Son 30 gün",
+  "Last 90 days": "Son 90 gün",
+  "Clear All": "Hepsini Temizle",
+  "Apply Filter": "Filtreyi Uygula",
+  "Data Sorted!": "Veriler sıralandı!",
+  "Load More Clicked!": "Daha Fazla Yükle'ye tıklandı!",
+  "Load More": "Daha Fazla Yükle",
+  "This": "Bu",
+  "This Index Subject": "Bu Dizin Konusu",
+  "English": "İngilizce",
+  "French": "Fransızca",
+  "German": "Almanca",
+  "Russian": "Rusça",
+  "Spanish": "İspanyolca",
+  "Search by Date": "Tarihe Göre Ara",
+  "Clear date filter": "Tarih filtresini temizle",
+  "You have been logged out successfully.": "Başarıyla çıkış yaptınız.",
+  "Are you sure you want to log out?": "Çıkış yapmak istediğinizden emin misiniz?",
+  "Log Out": "Çıkış Yap",
+  "What would you like to read about today ?": "Bugün ne okumak istersiniz?",
+  "Search by Title": "Başlığa göre ara",
+  "Article": "Makale",
+  "Photo": "Fotoğraf",
+  "Gallery": "Galeri",
+  "Event": "Etkinlik",
+  "Announcement": "Duyuru",
+  "Dark": "Koyu",
+  "Light": "Açık",
+  "Colorful": "Renkli",
+  "Minimal": "Minimal",
+  "Classic": "Klasik",
+  "Turkish": "Türkçe",
+  "Search": "Ara",
+  "Added to favorites!": "Favorilere eklendi!",
+  "Removed from favorites": "Favorilerden çıkarıldı",
+  "Image downloaded successfully!": "Görsel başarıyla indirildi!",
+  "Failed to download image": "Görsel indirilemedi",
+  "Rate this content": "Bu içeriği değerlendir",
+  "Your rating:": "Değerlendirmeniz:",
+  "reviews": "yorum",
+  "This Week's Cards": "Bu Haftanın Kartları",
+  "Camera Settings": "Kamera Ayarları",
+  "Camera": "Kamera",
+  "View full image": "Tam resmi görüntüle",
+  "Download image": "Resmi indir",
+  "Share image": "Resmi paylaş",
+  "Search by title or keyword...": "Başlığa veya anahtar kelimeye göre ara...",
+  "Advanced Filters": "Gelişmiş Filtreler",
+  "Content Type": "İçerik Türü",
+  "Topic/Theme": "Konu/Teması",
+  "Technology": "Teknoloji",
+  "Culture": "Kültür",
+  "Religion": "Din",
+  "Active filters:": "Aktif filtreler:",
+  "Remove filter": "Filtreyi kaldır",
+  "Apply Filters": "Filtreleri uygula",
+  "Search by title...": "Başlığa göre ara...",
+  "Clear Filters": "Filtreleri temizle",
+  "Similar Photos": "Benzer Fotoğraflar",
+  "Event Photography": "Etkinlik Fotoğrafçılığı",
+  "Documentary": "Belgesel",
+  "Cultural": "Kültürel",
+  "This Week's Photos": "Bu Haftanın Fotoğrafları"
 }
