feat(i18n): add Japanese locale and GuidedReading WeeklyMomentsDetails + update events, news, and routes

--- a/src/i18n/locales/ar/translation.json
+++ b/src/i18n/locales/ar/translation.json
@@ -527,5 +527,101 @@
   "Remove filter": " إزالة التصفية",
   "Apply Filters": "تطبيق التصفية",
   "Search by title...": "البحث حسب العنوان...",
-  "Clear Filters": "مسح التصفية"
+  "Clear Filters": "مسح التصفية",
+  "Learn more": "تعرف على المزيد",
+  "All Content": "كل المحتوى",
+  "Videos Only": "فيديوهات فقط",
+  "Reports Only": "تقارير فقط",
+  "Search by author...": "البحث حسب المؤلف...",
+  "Country": "الدولة",
+  "All Countries": "كل الدول",
+  "USA": "الولايات المتحدة الأمريكية",
+  "Canada": "كندا",
+  "UK": "المملكة المتحدة",
+  "France": "فرنسا",
+  "Germany": "ألمانيا",
+  "China": "الصينية",
+  "Japan": "اليابانية",
+  "Singapore": "سنغافورة",
+  "All Languages": "كل اللغات",
+  "Video Duration": "مدة الفيديو",
+  "All Durations": "كل المدد",
+  "Short (< 5 minutes)": "قصير (< 5 دقائق)",
+  "Medium (5-20 minutes)": "متوسط (5-20 دقيقة)",
+  "Long (> 20 minutes)": "طويل (> 20 دقيقة)",
+  "Publication Date": "تاريخ النشر",
+  "Pick a date range": "اختر نطاق تاريخ",
+  "Clear Date Filter": "مسح تصفية التاريخ",
+  "Clear All Filters": "مسح جميع الفلاتر",
+  "Filters applied successfully": "تم تطبيق الفلاتر بنجاح",
+  "Select Date Range": "اختر نطاق التاريخ",
+  "Warm discussion": "مناقشة دافئة",
+  "Drama": "دراما",
+  "Event Reports": "تقارير الفعاليات",
+  "No search results found": "لم يتم العثور على نتائج بحث",
+  "Search Results": "نتائج البحث",
+  "reading(s)": "قراءة(ات)",
+  "Show More": "عرض المزيد",
+  "Try adjusting your search criteria or filters": "حاول تعديل معايير البحث أو الفلاتر",
+  "WATCH NOW": "شاهد الآن",
+  "Add": "إضافة",
+  "Quick Select": "تحديد سريع",
+  "Last Week": "الأسبوع الماضي",
+  "Last Month": "الشهر الماضي",
+  "Last Year": "العام الماضي",
+  "Side Filtration": "تصفية جانبية",
+  "Events & Community": "الفعاليات والمجتمع",
+  "Source": "المصدر",
+  "Personal Growth": "النمو الشخصي",
+  "Nature": "الطبيعة",
+  "History": "التاريخ",
+  "Lifestyle": "أسلوب الحياة",
+  "Non-fiction": "غير خيالي",
+  "Fiction": "خيالي",
+  "Research": "بحث",
+  "Cookbook": "كتاب طبخ",
+  "Biography": "سيرة ذاتية",
+  "Harvard Review": "مراجعة هارفارد",
+  "National Geographic": "ناشيونال جيوغرافيك",
+  "MIT Press": "مطبعة معهد ماساتشوستس للتكنولوجيا",
+  "Oxford Journal": "مجلة أكسفورد",
+  "Food & Culture Magazine": "مجلة الطعام والثقافة",
+  "Academic Press": "المطبعة الأكاديمية",
+  "About Us History (Timeline)": "تاريخنا (الجدول الزمني)",
+  "About Us Team Function": "وظيفة فريقنا",
+  "Content downloaded successfully!": "تم تنزيل المحتوى بنجاح!",
+  "Failed to download content": "فشل في تنزيل المحتوى",
+  "Playing content": "تشغيل المحتوى",
+  "Content paused": "تم إيقاف المحتوى مؤقتًا",
+  "Similar Weekly Moments": "لحظات أسبوعية مشابهة",
+  "Community Report": "تقرير المجتمع",
+  "Weekly Moments": "لحظات أسبوعية",
+  "This Week's Moments": "لحظات هذا الأسبوع",
+  "Page Not Found": "لم يتم العثور على الصفحة",
+  "Sorry, the page you are looking for doesn't exist or has been moved.": "عذرًا، الصفحة التي تبحث عنها غير موجودة أو تم نقلها.",
+  "Go Home": "اذهب إلى الصفحة الرئيسية",
+  "Go Back": "اذهب إلى الوراء",
+  "Try searching for what you need from the main page": "حاول البحث عن ما تحتاجه من الصفحة الرئيسية",
+  "Top Cast": "أهم الممثلين",
+  "This show is": "هذا العرض هو",
+  "Tech & Innovation": "التكنولوجيا والابتكار",
+  "Business & Economy": "الأعمال والاقتصاد",
+  "Entertainment & Pop Culture": "الترفيه والثقافة الشعبية",
+  "Science & Discovery": "العلوم والاكتشاف",
+  "Health & Wellness": "الصحة والرفاهية",
+  "Sports": "الرياضة",
+  "Gaming": "الألعاب",
+  "Esport": "الرياضات الإلكترونية",
+  "Virtual Worlds": "العوالم الافتراضية",
+  "Travel & Adventure": "السفر والمغامرة",
+  "Politics & Global Affairs": "السياسة والشؤون العالمية",
+  "Finance": "التمويل",
+  "Recommendation News": "الأخبار الموصى بها",
+  "Cryptocurrency": "العملات المشفرة",
+  "Lifestyle & Trends": "أسلوب الحياة والاتجاهات",
+  "Social Media & Influencers": "وسائل التواصل الاجتماعي والمؤثرون",
+  "Environment & Sustainability": "البيئة والاستدامة",
+  "Our Team": "فريقنا",
+  "Art & Culture": "الفن والثقافة",
+  "More": "المزيد"
 }
