--- a/src/i18n/locales/ch/translation.json
+++ b/src/i18n/locales/ch/translation.json
@@ -496,5 +496,82 @@
   "Event Photography": "活動攝影",
   "Documentary": "紀實",
   "Cultural": "文化類",
-  "This Week's Photos": "本週照片"
+  "This Week's Photos": "本週照片",
+  "Learn more": "了解更多",
+  "All Content": "所有內容",
+  "Videos Only": "僅限影片",
+  "Reports Only": "僅限報告",
+  "Search by author...": "依作者搜尋...",
+  "Country": "國家",
+  "All Countries": "所有國家",
+  "USA": "美國",
+  "Canada": "加拿大",
+  "UK": "英國",
+  "France": "法國",
+  "Germany": "德國",
+  "China": "中國",
+  "Japan": "日本",
+  "Singapore": "新加坡",
+  "All Languages": "所有語言",
+  "Video Duration": "影片長度",
+  "All Durations": "所有長度",
+  "Short (< 5 minutes)": "短（5分鐘以下）",
+  "Medium (5-20 minutes)": "中（5-20分鐘）",
+  "Long (> 20 minutes)": "長（20分鐘以上）",
+  "Publication Date": "出版日期",
+  "Pick a date range": "選擇日期範圍",
+  "Clear Date Filter": "清除日期篩選",
+  "Clear All Filters": "清除所有篩選",
+  "Filters applied successfully": "篩選已成功套用",
+  "Select Date Range": "選擇日期範圍",
+  "Warm discussion": "熱烈討論",
+  "Drama": "戲劇",
+  "Event Reports": "事件報告",
+  "No search results found": "未找到搜索結果",
+  "Search Results": "搜索結果",
+  "reading(s)": "閱讀",
+  "Show More": "顯示更多",
+  "Try adjusting your search criteria or filters": "請調整您的搜索條件或篩選器",
+  "WATCH NOW": "立即觀看",
+  "Add": "添加",
+  "Quick Select": "快速選擇",
+  "Last Week": "上週",
+  "Last Month": "上個月",
+  "Last Year": "去年",
+  "Side Filtration": "側邊篩選",
+  "Events & Community": "事件與社區",
+  "Source": "來源",
+  "Personal Growth": "個人成長",
+  "Nature": "自然",
+  "History": "歷史",
+  "Lifestyle": "生活方式",
+  "Non-fiction": "非小說",
+  "Fiction": "小說",
+  "Research": "研究",
+  "Cookbook": "食譜",
+  "Biography": "傳記",
+  "Harvard Review": "哈佛評論",
+  "National Geographic": "國家地理",
+  "MIT Press": "麻省理工學院出版社",
+  "Oxford Journal": "牛津期刊",
+  "Food & Culture Magazine": "食品與文化雜誌",
+  "Academic Press": "學術出版社",
+  "About Us History (Timeline)": "關於我們的歷史（時間軸）",
+  "About Us Team Function": "關於我們的團隊職能",
+  "Content downloaded successfully!": "內容下載成功！",
+  "Failed to download content": "內容下載失敗",
+  "Playing content": "正在播放內容",
+  "Content paused": "內容已暫停",
+  "Similar Weekly Moments": "相似的每週時刻",
+  "Community Report": "社區報告",
+  "Weekly Moments": "每週時刻",
+  "This Week's Moments": "本週時刻",
+  "Page Not Found": "找不到頁面",
+  "Sorry, the page you are looking for doesn't exist or has been moved.": "抱歉，您要查找的頁面不存在或已移動。",
+  "Go Home": "回首頁",
+  "Go Back": "返回",
+  "Try searching for what you need from the main page": "請從主頁搜尋您需要的內容",
+  "Top Cast": "主要演員",
+  "Our Team": "我們的團隊",
+  "This show is": "這個節目是"
 }
