--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -457,5 +457,81 @@
   "Event Photography": "Event Photography",
   "Documentary": "Documentary",
   "Cultural": "Cultural",
-  "This Week's Photos": "This Week's Photos"
+  "This Week's Photos": "This Week's Photos",
+  "Learn more": "Learn more",
+  "All Content": "All Content",
+  "Videos Only": "Videos Only",
+  "Reports Only": "Reports Only",
+  "Search by author...": "Search by author...",
+  "Country": "Country",
+  "All Countries": "All Countries",
+  "USA": "USA",
+  "Canada": "Canada",
+  "UK": "UK",
+  "France": "France",
+  "Germany": "Germany",
+  "China": "China",
+  "Japan": "Japan",
+  "Singapore": "Singapore",
+  "All Languages": "All Languages",
+  "Video Duration": "Video Duration",
+  "All Durations": "All Durations",
+  "Short (< 5 minutes)": "Short (< 5 minutes)",
+  "Medium (5-20 minutes)": "Medium (5-20 minutes)",
+  "Long (> 20 minutes)": "Long (> 20 minutes)",
+  "Publication Date": "Publication Date",
+  "Pick a date range": "Pick a date range",
+  "Clear Date Filter": "Clear Date Filter",
+  "Clear All Filters": "Clear All Filters",
+  "Filters applied successfully": "Filters applied successfully",
+  "Select Date Range": "Select Date Range",
+  "Warm discussion": "Warm discussion",
+  "Drama": "Drama",
+  "Event Reports": "Event Reports",
+  "No search results found": "No search results found",
+  "Search Results": "Search Results",
+  "reading(s)": "reading(s)",
+  "Show More": "Show More",
+  "Try adjusting your search criteria or filters": "Try adjusting your search criteria or filters",
+  "WATCH NOW": "WATCH NOW",
+  "Add": "Add",
+  "Quick Select": "Quick Select",
+  "Last Week": "Last Week",
+  "Last Month": "Last Month",
+  "Last Year": "Last Year",
+  "Side Filtration": "Side Filtration",
+  "Events & Community": "Events & Community",
+  "Source": "Source",
+  "Personal Growth": "Personal Growth",
+  "Nature": "Nature",
+  "History": "History",
+  "Lifestyle": "Lifestyle",
+  "Non-fiction": "Non-fiction",
+  "Fiction": "Fiction",
+  "Research": "Research",
+  "Cookbook": "Cookbook",
+  "Biography": "Biography",
+  "Harvard Review": "Harvard Review",
+  "National Geographic": "National Geographic",
+  "MIT Press": "MIT Press",
+  "Oxford Journal": "Oxford Journal",
+  "Food & Culture Magazine": "Food & Culture Magazine",
+  "Academic Press": "Academic Press",
+  "About Us History (Timeline)": "About Us History (Timeline)",
+  "About Us Team Function": "About Us Team Function",
+  "Content downloaded successfully!": "Content downloaded successfully!",
+  "Failed to download content": "Failed to download content",
+  "Playing content": "Playing content",
+  "Content paused": "Content paused",
+  "Similar Weekly Moments": "Similar Weekly Moments",
+  "Community Report": "Community Report",
+  "Weekly Moments": "Weekly Moments",
+  "This Week's Moments": "This Week's Moments",
+  "Page Not Found": "Page Not Found",
+  "Sorry, the page you are looking for doesn't exist or has been moved.": "Sorry, the page you are looking for doesn't exist or has been moved.",
+  "Go Home": "Go Home",
+  "Go Back": "Go Back",
+  "Try searching for what you need from the main page": "Try searching for what you need from the main page",
+  "Top Cast": "Top Cast",
+  "This show is": "This show is"
 }
