--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -473,5 +473,82 @@
   "Event Photography": "Etkinlik Fotoğrafçılığı",
   "Documentary": "Belgesel",
   "Cultural": "Kültürel",
-  "This Week's Photos": "Bu Haftanın Fotoğrafları"
+  "This Week's Photos": "Bu Haftanın Fotoğrafları",
+  "Learn more": "Daha fazla öğren",
+  "All Content": "Tüm İçerik",
+  "Videos Only": "Sadece Videolar",
+  "Reports Only": "Sadece Raporlar",
+  "Search by author...": "Yazara göre ara...",
+  "Country": "Ülke",
+  "All Countries": "Tüm Ülkeler",
+  "USA": "ABD",
+  "Canada": "Kanada",
+  "UK": "Birleşik Krallık",
+  "France": "Fransa",
+  "Germany": "Almanya",
+  "China": "Çin",
+  "Japan": "Japonya",
+  "Singapore": "Singapur",
+  "All Languages": "Tüm Diller",
+  "Video Duration": "Video Süresi",
+  "All Durations": "Tüm Süreler",
+  "Short (< 5 minutes)": "Kısa (< 5 dakika)",
+  "Medium (5-20 minutes)": "Orta (5-20 dakika)",
+  "Long (> 20 minutes)": "Uzun (> 20 dakika)",
+  "Publication Date": "Yayın Tarihi",
+  "Pick a date range": "Bir tarih aralığı seçin",
+  "Clear Date Filter": "Tarih Filtrelerini Temizle",
+  "Clear All Filters": "Tüm Filtreleri Temizle",
+  "Filters applied successfully": "Filtreler başarıyla uygulandı",
+  "Select Date Range": "Tarih Aralığı Seçin",
+  "Warm discussion": "Sıcak tartışma",
+  "Drama": "Dram",
+  "Event Reports": "Etkinlik Raporları",
+  "No search results found": "Hiçbir arama sonucu bulunamadı",
+  "Search Results": "Arama Sonuçları",
+  "reading(s)": "okuma",
+  "Show More": "Daha Fazla Göster",
+  "Try adjusting your search criteria or filters": "Arama kriterlerinizi veya filtrelerinizi ayarlamayı deneyin",
+  "WATCH NOW": "ŞİMDİ İZLE",
+  "Add": "Ekle",
+  "Quick Select": "Hızlı Seçim",
+  "Last Week": "Geçen Hafta",
+  "Last Month": "Geçen Ay",
+  "Last Year": "Geçen Yıl",
+  "Side Filtration": "Yan Filtrasyon",
+  "Events & Community": "Etkinlikler ve Topluluk",
+  "Source": "Kaynak",
+  "Personal Growth": "Kişisel Gelişim",
+  "Nature": "Doğa",
+  "History": "Tarih",
+  "Lifestyle": "Yaşam Tarzı",
+  "Non-fiction": "Kurgu Dışı",
+  "Fiction": "Kurgu",
+  "Research": "Araştırma",
+  "Cookbook": "Aşçı Kitabı",
+  "Biography": "Biyografi",
+  "Harvard Review": "Harvard İncelemesi",
+  "National Geographic": "National Geographic",
+  "MIT Press": "MIT Press",
+  "Oxford Journal": "Oxford Dergisi",
+  "Food & Culture Magazine": "Gıda ve Kültür Dergisi",
+  "Academic Press": "Akademik Yayıncılık",
+  "About Us History (Timeline)": "Hakkımızda Tarih (Zaman Çizelgesi)",
+  "About Us Team Function": "Hakkımızda Ekip Fonksiyonu",
+  "Content downloaded successfully!": "İçerik başarıyla indirildi!",
+  "Failed to download content": "İçerik indirme başarısız oldu",
+  "Playing content": "İçerik oynatılıyor",
+  "Content paused": "İçerik duraklatıldı",
+  "Similar Weekly Moments": "Benzer Haftalık Anlar",
+  "Community Report": "Topluluk Raporu",
+  "Weekly Moments": "Haftalık Anlar",
+  "This Week's Moments": "Bu Haftanın Anları",
+  "Page Not Found": "Sayfa Bulunamadı",
+  "Sorry, the page you are looking for doesn't exist or has been moved.": "Üzgünüz, aradığınız sayfa mevcut değil veya taşındı.",
+  "Go Home": "Ana Sayfaya Git",
+  "Go Back": "Geri Git",
+  "Try searching for what you need from the main page": "Ana sayfadan ihtiyacınız olanı aramayı deneyin",
+  "Top Cast": "Öne Çıkan Oyuncular",
+  "Our Team": "Ekibimiz",
+  "This show is": "Bu gösteri"
 }
