fix: update sidebar, auth components, and translations (AR/CH/EN/JP/TR)

--- a/src/i18n/locales/ar/translation.json
+++ b/src/i18n/locales/ar/translation.json
@@ -623,5 +623,20 @@
   "Environment & Sustainability": "البيئة والاستدامة",
   "Our Team": "فريقنا",
   "Art & Culture": "الفن والثقافة",
-  "More": "المزيد"
+  "Suggested for you": "مقترح لك",
+  "This Week's Community Initiatives": "المبادرات المجتمعية لهذا الأسبوع",
+  "Good Effect Cards": "بطاقات التأثير الجيد",
+  "Needlework Love": "حب التطريز",
+  "Weekly Photos": "صور أسبوعية",
+  "More": "المزيد",
+  "Cards Or Photos": "بطاقات أو صور",
+  "All Cards": "كل البطاقات",
+  "All Photos": "كل الصور",
+  "Health Posts": "مقالات صحية",
+  "TV": "تلفزيون",
+  "Add New Video": "إضافة فيديو جديد",
+  "This Week's Suggested Cards": "بطاقات مقترحة لهذا الأسبوع",
+  "This Week's Incentive Cards": "بطاقات الحوافز لهذا الأسبوع",
+  "This Week's Needlework Love": "حب التطريز لهذا الأسبوع",
+  "This Week's Weekly Photos": "صور أسبوعية لهذا الأسبوع"
 }
