--- a/src/i18n/locales/ch/translation.json
+++ b/src/i18n/locales/ch/translation.json
@@ -573,5 +573,20 @@
   "Try searching for what you need from the main page": "請從主頁搜尋您需要的內容",
   "Top Cast": "主要演員",
   "Our Team": "我們的團隊",
-  "This show is": "這個節目是"
+  "Incentive Cards": "激勵卡片",
+  "Good Effect Cards": "良好效果卡片",
+  "Needlework Love": "針線活之愛",
+  "Weekly Photos": "每週照片",
+  "This show is": "這個節目是",
+  "More": "更多",
+  "Cards Or Photos": " 或照片",
+  "All Cards": "所有卡片",
+  "All Photos": "所有照片",
+  "Health Posts": "健康文章",
+  "TV": "電視",
+  "Add New Video": "添加新視頻",
+  "This Week's Suggested Cards": "",
+  "This Week's Incentive Cards": "",
+  "This Week's Needlework Love": "",
+  "This Week's Weekly Photos": ""
 }
