--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -533,5 +533,9 @@
   "Go Back": "Go Back",
   "Try searching for what you need from the main page": "Try searching for what you need from the main page",
   "Top Cast": "Top Cast",
-  "This show is": "This show is"
+  "This show is": "This show is",
+  "This Week's Suggested Cards": "This Week's Suggested Cards",
+  "This Week's Incentive Cards": "This Week's Incentive Cards",
+  "This Week's Needlework Love": "This Week's Needlework Love",
+  "This Week's Weekly Photos": "This Week's Weekly Photos"
 }
