--- a/src/i18n/locales/jp/translation.json
+++ b/src/i18n/locales/jp/translation.json
@@ -503,6 +503,18 @@
   "Edit Profile": "プロフィールを編集",
   "Save Password": "パスワードを保存",
   "Top Cast": "出演者",
-  "Our Team" : "私たちのチーム",
-  "This show is": "この番組は"
+  "Our Team": "私たちのチーム",
+  "Incentive Cards": "インセンティブカード",
+  "Good Effect Cards": "良好效果卡片",
+  "Needlework Love": "針線活之愛",
+  "Weekly Photos": "毎週の写真",
+  "This show is": "この番組は",
+  "Cards Or Photos": "カードまたは写真",
+  "All Cards": "すべてのカード",
+  "All Photos": "すべての写真",
+  "Health Posts": "健康記事",
+  "This Week's Suggested Cards": "今週のおすすめカード",
+  "This Week's Incentive Cards": "今週のインセンティブカード",
+  "This Week's Needlework Love": "今週の針線活之愛",
+  "This Week's Weekly Photos": "今週の毎週の写真"
 }
