--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -550,5 +550,17 @@
   "Try searching for what you need from the main page": "Ana sayfadan ihtiyacınız olanı aramayı deneyin",
   "Top Cast": "Öne Çıkan Oyuncular",
   "Our Team": "Ekibimiz",
-  "This show is": "Bu gösteri"
+  "Incentive Cards": "İkna Kartları",
+  "Good Effect Cards": "İyi Etki Kartları",
+  "Needlework Love": "İğne Oyası Aşkı",
+  "Weekly Photos": "Haftalık Fotoğraflar",
+  "This show is": "Bu gösteri",
+  "Cards Or Photos": "Kartlar veya Fotoğraflar",
+  "All Cards": "Tüm Kartlar",
+  "All Photos": "Tüm Fotoğraflar",
+  "Health Posts": "Sağlık Gönderileri",
+  "This Week's Suggested Cards": "Bu Haftanın Önerilen Kartları",
+  "This Week's Incentive Cards": "Bu Haftanın Teşvik Kartları",
+  "This Week's Needlework Love": "Bu Haftanın İğne Oyası Aşkı",
+  "This Week's Weekly Photos": "Bu Haftanın Haftalık Fotoğrafları"
 }
