feat: enhance LoginForm with password validation and add testing credentials in Arabic translations

--- a/src/i18n/locales/ar/translation.json
+++ b/src/i18n/locales/ar/translation.json
@@ -640,5 +640,6 @@
   "This Week's Needlework Love": "حب التطريز لهذا الأسبوع",
   "This Week's Weekly Photos": "صور أسبوعية لهذا الأسبوع",
   "SETTINGS": "الإعدادات",
-  "Available username For Testing": "اسم المستخدم المتاح للاختبار"
+  "Available username For Testing": "اسم المستخدم المتاح للاختبار",
+  "Available Password For Testing": " كلمة المرور المتاحة للاختبار"
 }
