--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -537,5 +537,12 @@
   "This Week's Suggested Cards": "This Week's Suggested Cards",
   "This Week's Incentive Cards": "This Week's Incentive Cards",
   "This Week's Needlework Love": "This Week's Needlework Love",
-  "This Week's Weekly Photos": "This Week's Weekly Photos"
+  "This Week's Weekly Photos": "This Week's Weekly Photos",
+  "Admin Sign In": "Admin Sign In",
+  "User Login": "User Login",
+  "Admin Login": "Admin Login",
+  "Available username For Testing": "Available username For Testing",
+  "Available Password For Testing": "Available Password For Testing",
+  "Card saved successfully!": "Card saved successfully!",
+  "SETTINGS": "SETTINGS"
 }
