--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -562,5 +562,13 @@
   "This Week's Suggested Cards": "Bu Haftanın Önerilen Kartları",
   "This Week's Incentive Cards": "Bu Haftanın Teşvik Kartları",
   "This Week's Needlework Love": "Bu Haftanın İğne Oyası Aşkı",
-  "This Week's Weekly Photos": "Bu Haftanın Haftalık Fotoğrafları"
+  "This Week's Weekly Photos": "Bu Haftanın Haftalık Fotoğrafları",
+  "Admin Sign In": "Yönetici Girişi",
+  "User Login": "Kullanıcı Girişi",
+  "Admin Login": "Yönetici Girişi",
+  "Available username For Testing": "Test İçin Kullanılabilir Kullanıcı Adı",
+  "Available Password For Testing": "Test İçin Kullanılabilir Şifre",
+  "Card saved successfully!": "Kart başarıyla kaydedildi!",
+  "Logout Account": "Hesaptan Çıkış Yap",
+  "SETTINGS": "Ayarlar"
 }
