feat: Add TOTPModal component for two-factor authentication
fix: Update RegisterForm to toggle password visibility

feat: Enhance ResetPasswordModal with email sending functionality

feat: Create CreateOrEditHistory component for managing historical events

refactor: Update History component to fetch and display history data with pagination

delete: Remove obsolete HistoryModal component

feat: Implement TableButtons component for pagination controls

i18n: Add translation for "Search Historical Events" in Arabic

feat: Integrate history data fetching in AboutHistoryContent component

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -646,5 +646,6 @@
   "User Login": "تسجيل دخول المستخدم",
   "Admin Login": "تسجيل دخول المسؤول",
   "Logout Account": "تسجيل خروج الحساب",
-  "Card saved successfully!": "تم حفظ البطاقة بنجاح!"
+  "Card saved successfully!": "تم حفظ البطاقة بنجاح!",
+  "Search Historical Events": "البحث في الأحداث التاريخية..."
 }
